Closed Bug 154196 Opened 23 years ago Closed 23 years ago

nsIAccessible's accState returns wrong value for XUL Treeitem node.

Categories

(Core :: Disability Access APIs, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: dsirnapalli, Assigned: yuanyi21)

Details

(Keywords: testcase)

Attachments

(2 files, 1 obsolete file)

-- Test case attached. The alert shows "1048576" for state. that means its focusable. But i implemented the code in the test case so that the node gets the focus. The last alert shows "Focused" for NodeFocus. When i got this alert that means focus is happening. Therefore the alert for state should show "1048580" (STATE_FOCUSED + STATE_FOCUSABLE). The focus is happening but the state is not picking up the focus value.
Keywords: testcase
Tested in windows, I found all windows widgets have neither STATE_FOCUSABLE nor STATE_FOCUSED state. Aaron, it's a windows' bug or our redundant?
Here is the rule we should follow: If you can tab to something, it should be marked STATE_FOCUSABLE. If it can be selected, it should be marked STATE_SELECTABLE. However, I don't think anything bad will happen if we report some things that are STATE_SELECTABLE also as STATE_FOCUSABLE.
now, treeitem has focusable and selectable state, but tree has neither. seeking r=
Attachment #89225 - Attachment is obsolete: true
Comment on attachment 89239 [details] [diff] [review] better fix. override acctakefocus, acctakeselection, accremoveselection for treeitem r=aaronl
Attachment #89239 - Flags: review+
Comment on attachment 89239 [details] [diff] [review] better fix. override acctakefocus, acctakeselection, accremoveselection for treeitem sr=jag
Attachment #89239 - Flags: superreview+
checked in!
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
-- Verified in todays trunk build. Works fine. Marking the bug as verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: