Bug 154196 nsIAccessible's accState returns wrong value for XUL Treeitem node r=aaronl, sr=jag override acctakefocus, acctakeselection, accremoveselection for treeitem